--- a/templates/singlefile.html
+++ b/templates/singlefile.html
@@ -32,6 +32,16 @@
             text-decoration: none;
         }
 
+        .instructions {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .instructions p {
+            font-size: 16px;
+            margin: 0;
+        }
+
         .content {
             display: flex;
             justify-content: center;
@@ -125,6 +135,9 @@
         <h1 class="title">AGP-T</h1>
         <p>Sales Call Knowledge Base</p>
         <a href="/" class="navigation-link">Go back to Index</a>
+    </div>
+    <div class="instructions">
+        <p>First, select a file to upload. Click the "Upload" button. After that, you can ask as many questions as you want on the right-hand side.</p>
     </div>
     <div class="content">
         <div class="upload-section">
