--- a/templates/singlefile.html
+++ b/templates/singlefile.html
@@ -73,7 +73,7 @@
             font-size: 16px;
             resize: none;
             padding: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 0px;
         }
 
         .submit-button {
@@ -128,6 +128,15 @@
             font-size: 18px;
             line-height: 1.5;
         }
+
+        .dropdown {
+            margin-bottom: 20px;
+        }
+
+        .dropdown select {
+            width: 300px;
+            height: 30px;
+        }
     </style>
 </head>
 <body>
@@ -142,13 +151,23 @@
     <div class="content">
         <div class="upload-section">
             <form class="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-                <input class="file-input" type="file" name="audio_file" accept="audio/*,video/mp4" required>
+                <input class="file-input" type="file" name="audio_file" accept="audio/*,video/mp4">
                 <textarea class="additional-notes" name="notes" placeholder="Enter additional notes/details regarding the interview"></textarea>
+                <div class="dropdown">
+                    <p class="instructions">Or</p>
+                    <select name="dropdown_menu" id="dropdown_menu">
+                        <option value="">Select an existing call to query</option>
+                        {% for option in dropdown_options %}
+                            <option value="{{ option }}">{{ option }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <div style="display: flex; justify-content: center;">
                     <button class="submit-button" type="submit">Upload</button>
                 </div>
             </form>
         </div>
+
         <div class="query-section">
             <form class="query-form" action="/submit" method="POST">
                 <textarea class="query-input" name="query" placeholder="Enter your query" required></textarea>
