--- a/templates/singlefile.html
+++ b/templates/singlefile.html
@@ -143,7 +143,7 @@
     <div class="banner">
         <h1 class="title">AGP-T</h1>
         <p>Sales Call Knowledge Base</p>
-        <a href="/" class="navigation-link">Go back to Index</a>
+        <a href="/" class="navigation-link">Refresh Page</a>
     </div>
     <div class="instructions">
         <p>First, select a file to upload. Click the "Upload" button. After that, you can ask as many questions as you want on the right-hand side.</p>
